# manifoldbt

./: README.md  pyproject.toml
.github/workflows/: ci.yml  no-source-leak.yml
docs/: customer-archetypes.md  gpu-derived-series-plan.md  gpu-sweep-coverage-plan.md  perf_audit_2026-07-18.md  perf_plan_2026-07.md  plotly_migration_plan.md
examples/: 00_template.py  01_trend_following.py  02_mean_reversion.py  03_multi_asset_momentum.py  03_multi_asset_momentum_backup.py  04_linear_regression.py  05_stat_arb.py  06_full_visualization.py  07_walk_forward.py  08_sweep_2d_heatmap.py  09_surface_3d.py  10_monte_carlo.py  11_portfolio.py  13_stochastic_simulation.py  14_multi_timeframe.py  15_cross_exchange.py  16_hashrate_exogene.py  17_per_venue_fees.py  18_csv_import.py  19_custom_indicators.py  bench_mega_all_symbols.py
python/manifoldbt/: __init__.py  _native.pyi  _reprs.py  cli.py  config.py  dataframe.py  diagnostics.py  exceptions.py  portfolio.py  strategy.py  sweep.py
python/manifoldbt/plot/: __init__.py  _decimate.py  _theme.py  _utils.py  _window.py  backtest.py  chart.py  research.py  tearsheet.py
python/tests/: test_batch_orders.py  test_diagnostics.py  test_doc_api_contract.py  test_golden_buy_and_hold.py  test_import_dataframe.py  test_plot_charts.py  test_plot_tearsheet.py  test_sweep.py  test_sweep_validation.py
