[project]
name = "manifoldbt"
version = "0.8.7"
description = "Rust-powered backtesting engine for quantitative research"
requires-python = ">=3.9"
license = { file = "LICENSE" }
license-files = ["LICENSE"]
keywords = ["backtesting", "trading", "quantitative-finance", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = ["pyarrow>=14.0"]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
pandas = ["pandas>=1.5"]
polars = ["polars>=0.20"]
plotly = ["plotly>=5.0"]
all = ["matplotlib>=3.7", "plotly>=5.0", "pandas>=1.5", "polars>=0.20"]
dev = ["pytest>=7.0", "polars>=0.20", "pandas>=1.5", "pyarrow>=14.0", "matplotlib>=3.7"]

[project.scripts]
manifoldbt = "manifoldbt.cli:main"

[project.urls]
Homepage = "https://manifold-bt.com"
Repository = "https://github.com/manifoldbt/manifoldbt"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
